--- a/index.html
+++ b/index.html
@@ -303,8 +303,18 @@
                 });
 
                 gltfLoader.load('./sword.glb', (sd) => {
-                    subAsset = sd.scene; subAsset.visible = false;
-                    if(r_mount) { r_mount.add(subAsset); subAsset.rotation.set(Math.PI/2, 0, Math.PI); }
+                    subAsset = sd.scene; 
+                    subAsset.visible = false;
+                    
+                    // サイズ調整（小さくする）
+                    subAsset.scale.set(0.8, 0.8, 0.8);
+                    
+                    if(r_mount) { 
+                        r_mount.add(subAsset); 
+                        // 位置と回転を調整
+                        subAsset.position.set(0, 0, 0); // ボーンの位置を基準
+                        subAsset.rotation.set(0, 0, Math.PI); // Z軸180度回転
+                    }
                 });
 
                 ['./a.glb', './b.glb'].forEach(u => {
